--- a/cisco_asa_log/logstash/pipeline/cisco-asa.conf
+++ b/cisco_asa_log/logstash/pipeline/cisco-asa.conf
@@ -1,7 +1,18 @@
-# Logstash Configuration for Cisco ASA Logs
-# Complete event-specific parsing with correct grok patterns
+input {
+  kafka {
+    bootstrap_servers => "redpanda:9092"
+    topics => ["cisco_asa_logs"]
+    codec => json
+    consumer_threads => 1
+    group_id => "logstash-cisco-asa-parser"
+    auto_offset_reset => "earliest"
+  }
+}
 
 filter {
+  # The incoming Kafka message already has the message parsed as JSON
+  # So we work with the "message" field directly
+  
   # ============================================================
   # STEP 1: Parse the ASA syslog header
   # ============================================================
@@ -15,10 +26,7 @@ filter {
   # STEP 2: Branch based on event_id and parse message details
   # ============================================================
   
-  # ------------------------------------------------------------
-  # 302013: Built TCP Connection (HAS NAT IPs in parentheses)
-  # Format: Built {inbound|outbound} TCP connection ID for src:ip/port (nat_ip/port) to dst:ip/port (nat_ip/port)
-  # ------------------------------------------------------------
+  # 302013: Built TCP Connection
   if [event_id] == "302013" {
     grok {
       match => {
@@ -37,10 +45,7 @@ filter {
     }
   }
   
-  # ------------------------------------------------------------
-  # 302014: Teardown TCP Connection (NO NAT IPs, has duration/bytes/reason)
-  # Format: Teardown TCP connection ID for src:ip/port to dst:ip/port duration H:MM:SS bytes ### reason
-  # ------------------------------------------------------------
+  # 302014: Teardown TCP Connection
   else if [event_id] == "302014" {
     grok {
       match => {
@@ -58,10 +63,7 @@ filter {
     }
   }
   
-  # ------------------------------------------------------------
-  # 302015: Built UDP Connection (similar to 302013 with NAT IPs)
-  # Format: Built {inbound|outbound} UDP connection ID for src:ip/port (nat_ip/port) to dst:ip/port (nat_ip/port)
-  # ------------------------------------------------------------
+  # 302015: Built UDP Connection
   else if [event_id] == "302015" {
     grok {
       match => {
@@ -80,10 +82,7 @@ filter {
     }
   }
   
-  # ------------------------------------------------------------
-  # 302016: Teardown UDP Connection (NO NAT IPs, has duration/bytes)
-  # Format: Teardown UDP connection ID for src:ip/port to dst:ip/port duration H:MM:SS bytes ###
-  # ------------------------------------------------------------
+  # 302016: Teardown UDP Connection
   else if [event_id] == "302016" {
     grok {
       match => {
@@ -101,10 +100,7 @@ filter {
     }
   }
   
-  # ------------------------------------------------------------
   # 302020: Built ICMP Connection
-  # Format: Built {inbound|outbound} ICMP connection for faddr ip/0 gaddr ip/0 laddr ip/0
-  # ------------------------------------------------------------
   else if [event_id] == "302020" {
     grok {
       match => {
@@ -114,10 +110,7 @@ filter {
     }
   }
   
-  # ------------------------------------------------------------
   # 302021: Teardown ICMP Connection
-  # Format: Teardown ICMP connection for faddr ip/0 gaddr ip/0 laddr ip/0 duration H:MM:SS bytes ###
-  # ------------------------------------------------------------
   else if [event_id] == "302021" {
     grok {
       match => {
@@ -130,11 +123,7 @@ filter {
     }
   }
   
-  # ------------------------------------------------------------
   # 305011: Built Dynamic Translation
-  # Format: Built dynamic {TCP|UDP|ICMP} translation from src:ip/port to dst:ip/port
-  # NOTE: Uses "from...to" not "for...to"
-  # ------------------------------------------------------------
   else if [event_id] == "305011" {
     grok {
       match => {
@@ -150,11 +139,7 @@ filter {
     }
   }
   
-  # ------------------------------------------------------------
   # 305012: Teardown Dynamic Translation
-  # Format: Teardown dynamic {TCP|UDP|ICMP} translation from src:ip/port to dst:ip/port duration H:MM:SS
-  # NOTE: Uses "from...to" not "for...to"
-  # ------------------------------------------------------------
   else if [event_id] == "305012" {
     grok {
       match => {
@@ -170,10 +155,7 @@ filter {
     }
   }
   
-  # ------------------------------------------------------------
   # 106023: Deny tcp/udp by ACL
-  # Format: Deny {tcp|udp} src src_ifc:src_ip/src_port dst dst_ifc:dst_ip/dst_port by access-group "ACL_NAME" [0x0, 0x0]
-  # ------------------------------------------------------------
   else if [event_id] == "106023" {
     grok {
       match => {
@@ -189,10 +171,7 @@ filter {
     }
   }
   
-  # ------------------------------------------------------------
   # 106015: Deny TCP (no connection)
-  # Format: Deny {TCP|UDP} (no connection) from src_ip/src_port to dst_ip/dst_port flags {flags} on interface ifc_name
-  # ------------------------------------------------------------
   else if [event_id] == "106015" {
     grok {
       match => {
@@ -208,10 +187,7 @@ filter {
     }
   }
   
-  # ------------------------------------------------------------
   # 106001: Deny reverse path check
-  # Format: Deny {tcp|udp|icmp} reverse path check from src_ip to dst_ip on interface ifc_name
-  # ------------------------------------------------------------
   else if [event_id] == "106001" {
     grok {
       match => {
@@ -221,10 +197,7 @@ filter {
     }
   }
   
-  # ------------------------------------------------------------
   # 313001: Denied ICMP
-  # Format: Denied ICMP type=##, code=## from src_ip on interface ifc_name due to rate limit
-  # ------------------------------------------------------------
   else if [event_id] == "313001" {
     grok {
       match => {
@@ -240,10 +213,7 @@ filter {
     }
   }
   
-  # ------------------------------------------------------------
   # 313004: Denied ICMP (no matching session)
-  # Format: Denied ICMP type=##, from laddr src_ip on interface ifc_name to dst_ip: no matching session
-  # ------------------------------------------------------------
   else if [event_id] == "313004" {
     grok {
       match => {
@@ -256,10 +226,7 @@ filter {
     }
   }
   
-  # ------------------------------------------------------------
   # 313005: No matching connection for ICMP error
-  # Format: No matching connection for ICMP error message: {details} on {interface} interface. Original IP payload: {details}
-  # ------------------------------------------------------------
   else if [event_id] == "313005" {
     grok {
       match => {
@@ -269,10 +236,7 @@ filter {
     }
   }
   
-  # ------------------------------------------------------------
   # 400013: IDS Alert
-  # Format: IDS:#### ICMP echo request from src_ip to dst_ip on interface ifc_name
-  # ------------------------------------------------------------
   else if [event_id] == "400013" {
     grok {
       match => {
@@ -285,10 +249,7 @@ filter {
     }
   }
   
-  # ------------------------------------------------------------
   # 113004: AAA Authentication Successful
-  # Format: AAA user authentication Successful: server = server_ip, user = username
-  # ------------------------------------------------------------
   else if [event_id] == "113004" {
     grok {
       match => {
@@ -298,10 +259,7 @@ filter {
     }
   }
   
-  # ------------------------------------------------------------
   # 113015: AAA Authentication Rejected
-  # Format: AAA user authentication Rejected: reason = {reason}: user = username, server = server_ip
-  # ------------------------------------------------------------
   else if [event_id] == "113015" {
     grok {
       match => {
@@ -311,14 +269,31 @@ filter {
     }
   }
   
-  # ------------------------------------------------------------
   # 713172: VPN IP Assignment
-  # Format: Group = vpn_group, IP = src_ip, Assigned private IP = private_ip
-  # ------------------------------------------------------------
   else if [event_id] == "713172" {
     grok {
       match => {
         "asa_message" => "Group = %{DATA:vpn_group}, IP = %{IP:public_ip}, Assigned private IP = %{IP:private_ip}"
+      }
+      remove_field => ["asa_message"]
+    }
+  }
+  
+  # 718012: HELLO request (from your sample data)
+  else if [event_id] == "718012" {
+    grok {
+      match => {
+        "asa_message" => "Sent HELLO request to %{IP:target_ip}"
+      }
+      remove_field => ["asa_message"]
+    }
+  }
+  
+  # 101002: Failover cable issue (from your sample data)
+  else if [event_id] == "101002" {
+    grok {
+      match => {
+        "asa_message" => "\(%{DATA:failover_state}\) %{GREEDYDATA:error_message}"
       }
       remove_field => ["asa_message"]
     }
@@ -336,10 +311,34 @@ filter {
   }
   
   # ============================================================
-  # STEP 4: Add timestamp parsing (optional)
+  # STEP 4: Add timestamp parsing
   # ============================================================
   date {
     match => [ "timestamp", "MMM dd HH:mm:ss", "MMM  d HH:mm:ss" ]
     target => "@timestamp"
+  }
+  
+  # Add a field to mark successful parsing
+  mutate {
+    add_field => { "parsed" => "true" }
+  }
+  
+  # Remove Kafka metadata fields if not needed
+  mutate {
+    remove_field => ["@version"]
+  }
+}
+
+output {
+  # Output to Kafka topic for parsed logs
+  kafka {
+    bootstrap_servers => "redpanda:9092"
+    topic_id => "cisco_asa_parsed_logstash"
+    codec => json
+  }
+  
+  # Optional: Output to stdout for debugging
+  stdout {
+    codec => rubydebug
   }
 }
